--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Helvetica;
     font-weight: normal;
 }
 
@@ -24,43 +24,59 @@ body {
     font-size: 2rem;
     border: 1px solid white;
     outline: none;
-}
-
-/*TODO: Adjust hover color; */
-.main-calculator > .other-buttons:hover {
-    background-color: rgb(255, 255, 255);
-}
-
-.equals {
-    background-color: rgb(190, 190, 190);
-}
-
-.equals:hover {
-    background-color: rgb(255, 255, 255);
-}
-
-.all-clear {
-    background-color: orange;
-}
-
-.all-clear:hover {
-    background-color: rgb(255, 115, 1);
-}
-
-.delete {
-    background-color: orange;
-}
-
-.delete:hover {
-    background-color: rgb(255, 115, 1);
+    font-family: Helvetica;
 }
 
 .spanned {
     grid-column: span 2;
 }
 
-.other-buttons {
-    background-color: rgb(184, 194, 197);
+.number-buttons {
+    background-color: #505050;
+    color: white;
+    font-family: Helvetica;
+}
+
+.number-buttons:hover {
+    background-color: #797777;
+}
+
+.all-clear {
+    background-color: #D4D4D2;
+    font-family: Helvetica;
+}
+
+.all-clear:hover {
+    background-color: #f0f0ec;
+}
+
+.delete {
+    background-color: #D4D4D2;
+    font-family: Helvetica;
+}
+
+.delete:hover {
+    background-color: #f0f0ec;
+}
+
+.operators {
+    background-color: #FF9500;
+    color: white;
+    font-family: Helvetica;
+}
+
+.operators:hover {
+    background-color: #ffbb00;
+}
+
+.equals {
+    background-color: #FF9500;
+    color: white;
+    font-family: Helvetica;
+}
+
+.equals:hover {
+    background-color: #ffbb00;
 }
 
 .output {
@@ -74,4 +90,5 @@ body {
     font-size: 30px;
     word-wrap: break-word;
     word-break: break-all;
+    font-family: Helvetica;
 }
