--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,11 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: rgba(76, 176, 184);
-}
+    background-color: var(--bg-color);
+    color: var(--font-color);
+    margin: 0 auto;
+    transition: background 0.3s ease;
+  }
 
 .main-calculator {
     display: grid;
@@ -25,6 +28,8 @@ body {
     border: 1px solid white;
     outline: none;
     font-family: Helvetica;
+    border: 1px solid  var(--output-border-color);
+    transition: background 0.3s ease;
 }
 
 .spanned {
@@ -43,7 +48,7 @@ body {
 
 .light-gray {
     background-color: #D4D4D2;
-    font-family: Helvetica; 
+    font-family: Helvetica;
 }
 
 .light-gray:hover {
@@ -72,7 +77,8 @@ body {
 
 .output {
     grid-column: 1 / -1;
-    background-color: rgba(0, 0, 0, 0.75);
+    background: var(--output-border-color);
+    /* opacity: 0.7; */
     display: flex;
     align-items: flex-end;
     justify-content:flex-end;
@@ -82,4 +88,81 @@ body {
     word-wrap: break-word;
     word-break: break-all;
     font-family: Helvetica;
+    transition: background 0.3s ease;
+}
+
+/*Light/Dark mode*/
+
+[data-theme="dark"] {
+    --font-color: #e1e1ff;
+    --bg-color: #161625;
+    --output-border-color: #000000;
+}
+
+/* Default theme */
+[data-theme="light"] {
+    --bg-color: #4cb0b8;
+    --output-border-color: #1f1f1f;
+}
+
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+}
+  
+.theme-switch input {
+    display:none;
+}
+
+.em-message {
+    margin-left: 10px;
+    font-size: 1rem;
+    font-family: sans-serif;
+}
+  
+.slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+}
+  
+.slider:before {
+    background-color: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+}
+  
+input:checked + .slider {
+    background-color: #66bb6a;
+}
+  
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+  
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
 }
